--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@portabletext/react": "^5.0.0",
     "@sanity/image-url": "^2.0.2",
     "@sanity/vision": "^4.20.3",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.23.25",
     "next": "16.0.7",
     "next-sanity": "^11.6.10",
